text align  bug found

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
   font-size: 800%;
 }
 .Footer {
-  textAlign: center;
+  text-align: center;
   padding: 20px;
   background-color: #fffeee;
 }
